COrrection caractères invisibles collector & style

--- a/portail/collector/styleCO.css
+++ b/portail/collector/styleCO.css
@@ -240,12 +240,12 @@
 	text-align: center;
 	font-family: robotolight, Verdana, sans-serif;
 	font-size: 100%;
+	color: #262626;
 	width: calc(100% - 100px);
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 5px;
 	margin-bottom: 5px;
-	color: #262626;
 	word-wrap: break-word;
 }
 
@@ -315,8 +315,9 @@
 	padding-top: 5px;
 	padding-bottom: 5px;
 	text-align: right;
-	font-family: robotothin, Verdana, sans-serif;
+	font-family: robotolight, Verdana, sans-serif;
 	font-size: 80%;
+	color: #262626;
 	font-style: italic;
 }
 
@@ -326,17 +327,21 @@
 	margin-right: 40px;
 	padding-top: 10px;
 	padding-bottom: 10px;
-	font-family: robotothin, Verdana, sans-serif;
+	font-family: robotolight, Verdana, sans-serif;
 	font-size: 100%;
+	color: #262626;
 	text-align: justify;
+	word-wrap: break-word;
+	max-width: calc(525px - 80px);
 }
 
 .text_context
 {
 	width: calc(100% - 80px);
   background-color: #b3b3b3;
-  font-family: robotothin, Verdana, sans-serif;
+  font-family: robotolight, Verdana, sans-serif;
   font-style: italic;
+	color: #262626;
   text-align: justify;
 	padding-left: 40px;
 	padding-right: 40px;
@@ -346,6 +351,8 @@
 	border-bottom-right-radius: 2px;
 	border-top: solid 3px #a3a3a3;
 	overflow: hidden;
+	word-wrap: break-word;
+	max-width: calc(525px - 80px);
 }
 
 /*** Vote ***/
@@ -538,6 +545,7 @@
   padding: 1%;
   font-family: robotolight, Verdana, sans-serif;
   font-size: 80%;
+	color: #262626;
 }
 
 .modify_other
@@ -553,6 +561,7 @@
   padding: 1%;
   font-family: robotolight, Verdana, sans-serif;
   font-size: 80%;
+	color: #262626;
 }
 
 .old_user
@@ -560,7 +569,7 @@
   text-align: center;
   font-family: robotoregular, Verdana, sans-serif;
   font-style: italic;
-  color: white;
+  color: #262626;
   width: 106px;
   line-height: 15px;
   margin-top: 10px;
@@ -583,6 +592,7 @@
   padding: 1%;
   font-family: robotolight, Verdana, sans-serif;
   font-size: 80%;
+	color: #262626;
 }
 
 .modify_text_collector
@@ -595,6 +605,7 @@
   margin-top: -20px;
   margin-bottom: 10px;
   font-family: robotolight, Verdana, sans-serif;
+	color: #262626;
   border-radius: 2px;
   border: solid 1px #a3a3a3;
   min-height: 120px;
@@ -606,6 +617,7 @@
   width: 98%;
   padding: 1%;
   font-family: robotolight, Verdana, sans-serif;
+	color: #262626;
   border-radius: 2px;
   border: solid 1px #a3a3a3;
   min-height: 70px;
